Added Existing pets frontend